--- a/project/res/drawable/rounded_item.xml
+++ b/project/res/drawable/rounded_item.xml
@@ -17,12 +17,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="20dp" />
+    <corners android:radius="@dimen/corner_rounding" />
 
     <!-- <stroke
         android:width="4dp"
         android:color="@color/black" />
      -->
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/light_blue"/>
     
 </shape>
