--- a/project/res/layout/main.xml
+++ b/project/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
  Copyright 2013 C. A. Fitzgerald
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,35 +13,43 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. 
---> 
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:baselineAligned="false"
-    >
+    android:orientation="horizontal" >
 
-    <!-- <FrameLayout
-        android:id="@+id/list_frame"
-        android:layout_width="@dimen/left_hand_list_width"
-        android:layout_height="match_parent" >
-    </FrameLayout> -->
-    
     <android.support.v4.view.ViewPager
         android:id="@+id/list_pager"
         android:layout_width="@dimen/left_hand_list_width"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/light_blue" >
+
         <android.support.v4.view.PagerTabStrip
+            android:paddingTop="@dimen/standard_padding"
             android:layout_width="match_parent"
-        	android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
         
     </android.support.v4.view.ViewPager>
-    
-    <FrameLayout
-        android:id="@+id/detail_frame"
+
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" >
-    </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/detail_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </FrameLayout>
+        
+        <View 
+            android:layout_width="@dimen/drop_shadow_width"
+            android:layout_height="match_parent"
+            android:background="@drawable/drop_shadow_divider"/>
+        
+    </RelativeLayout>
 
 </LinearLayout>
