--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -43,33 +43,54 @@
         <com.github.riotopsys.pannellayout.PannelLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/standard_padding"
             android:paddingBottom="@dimen/standard_padding"
+            android:paddingLeft="@dimen/standard_padding"
             app:columns="6"
             app:divider_size="@dimen/standard_padding" >
 
-            <ImageView
-                android:id="@+id/cover_image"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_columnSpan="1"
-                app:layout_rowSpan="4"
-                android:background="@color/black"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon" />
+                app:layout_rowSpan="4" >
 
-            <ScrollView
-                android:id="@+id/synopsis_container"
+                <ImageView
+                    android:id="@+id/cover_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+
+                <ProgressBar
+                    android:id="@+id/cover_progress_bar"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 style="@style/detail_item"
                 app:layout_columnSpan="3"
                 app:layout_rowSpan="4" >
 
-                <TextView
-                    android:id="@+id/synopsis"
+                <ScrollView
+                    android:id="@+id/synopsis_container"
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <TextView
+                        android:id="@+id/synopsis"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </ScrollView>
+
+                <ProgressBar
+                    android:id="@+id/synopsis_progress_bar"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/ipsum" />
-            </ScrollView>
+                    android:layout_centerInParent="true" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/watched_panel"
