--- a/project/res/layout/placard_fragment.xml
+++ b/project/res/layout/placard_fragment.xml
@@ -20,6 +20,7 @@
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:gravity="center"
+    android:background="@color/light_blue"
     android:orientation="vertical" >
 
     <ImageView
