--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -51,6 +51,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/light_blue"
                 app:layout_columnSpan="1"
                 app:layout_rowSpan="4" >
 
