--- a/project/res/layout-sw720dp-port/anime_detail_fragment.xml
+++ b/project/res/layout-sw720dp-port/anime_detail_fragment.xml
@@ -47,12 +47,13 @@
             android:paddingLeft="@dimen/standard_padding"
             android:paddingRight="@dimen/standard_padding"
             app:columns="2"
+            app:row_ratio=".25"
             app:divider_size="@dimen/standard_padding" >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_rowSpan="2"
+                app:layout_rowSpan="4"
                 android:background="@drawable/rounded_item" >
 
                 <ImageView
@@ -104,7 +105,7 @@
             <RelativeLayout
                 style="@style/detail_item"
                 app:layout_columnSpan="1"
-                app:layout_rowSpan="3" >
+                app:layout_rowSpan="5" >
 
                 <ScrollView
                     android:id="@+id/synopsis_container"
@@ -192,7 +193,7 @@
             <LinearLayout
                 android:id="@+id/statistics_container"
                 style="@style/detail_item"
-                app:layout_rowSpan="1"
+                app:layout_rowSpan="2"
                 android:orientation="vertical"
                 android:visibility="gone" >
 
