--- a/project/res/layout/anime_item.xml
+++ b/project/res/layout/anime_item.xml
@@ -15,7 +15,7 @@
  limitations under the License. 
 --> 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="@dimen/item_width"
     android:layout_height="@dimen/item_bounds"
     android:background="@color/blue_even_item" >
 
