--- a/project/res/layout-sw600dp/item_list_fragment.xml
+++ b/project/res/layout-sw600dp/item_list_fragment.xml
@@ -14,7 +14,7 @@
  See the License for the specific language governing permissions and
  limitations under the License. 
 --> 
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,5 +22,4 @@
     android:numColumns="auto_fit"
     android:fastScrollEnabled="true"
     android:scrollingCache="true"
-    android:smoothScrollbar="true"
-    android:horizontalSpacing="@dimen/standard_padding"/>
+    android:smoothScrollbar="true"/>
