--- a/project/res/layout/main.xml
+++ b/project/res/layout/main.xml
@@ -21,7 +21,7 @@
     android:orientation="horizontal" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/list_pager"
+        android:id="@+id/list_pager_anime"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_blue" >
