--- a/project/res/layout-port/manga_detail_fragment.xml
+++ b/project/res/layout-port/manga_detail_fragment.xml
@@ -85,7 +85,7 @@
                     android:textStyle="bold" />
 
                 <Spinner
-                    android:id="@+id/anime_watched_status_add"
+                    android:id="@+id/manga_watched_status_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -136,7 +136,7 @@
                     android:textStyle="bold" />
 
                 <Spinner
-                    android:id="@+id/anime_watched_status"
+                    android:id="@+id/manga_watched_status"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -157,7 +157,7 @@
                     android:textStyle="bold" />
 
                 <Spinner
-                    android:id="@+id/anime_score_status"
+                    android:id="@+id/manga_score_status"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
