--- a/project/res/layout/main.xml
+++ b/project/res/layout/main.xml
@@ -14,24 +14,33 @@
  See the License for the specific language governing permissions and
  limitations under the License. 
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:baselineAligned="false"
-    android:orientation="horizontal" >
+    android:background="@color/light_blue"
+    android:baselineAligned="false" >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/list_pager_anime"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/light_blue" >
+        android:layout_height="match_parent" >
 
         <android.support.v4.view.PagerTabStrip
-            android:paddingTop="@dimen/standard_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
-        
+            android:paddingTop="@dimen/standard_padding" />
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/list_pager_manga"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" >
+
+        <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/standard_padding" />
+    </android.support.v4.view.ViewPager>
+
+</FrameLayout>
