adding manga crossreferances to anime

--- a/project/res/layout-sw720dp-port/anime_detail_fragment.xml
+++ b/project/res/layout-sw720dp-port/anime_detail_fragment.xml
@@ -319,6 +319,14 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:visibility="gone" />
+            
+            <TextView
+                android:id="@+id/manga_adaptations"
+                style="@style/detail_item"
+                app:layout_columnSpan="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
         </com.github.riotopsys.pannellayout.PannelLayout>
     </ScrollView>
 
