--- a/project/res/layout-port/anime_detail_fragment.xml
+++ b/project/res/layout-port/anime_detail_fragment.xml
@@ -295,6 +295,14 @@
                 android:textStyle="bold"
                 android:visibility="gone" />
             
+            <TextView
+                android:id="@+id/manga_adaptations"
+                style="@style/detail_item"
+                app:layout_columnSpan="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
+            
             <RelativeLayout
                 style="@style/detail_item"
                 app:layout_columnSpan="1"
