adding anime crossreferances to manga

--- a/project/res/layout-sw720dp-port/manga_detail_fragment.xml
+++ b/project/res/layout-sw720dp-port/manga_detail_fragment.xml
@@ -313,6 +313,14 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:visibility="gone" />
+            
+            <TextView
+                android:id="@+id/anime_adaptations"
+                style="@style/detail_item"
+                app:layout_columnSpan="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
         </com.github.riotopsys.pannellayout.PannelLayout>
     </ScrollView>
 
