--- a/project/res/layout/manga_detail_fragment.xml
+++ b/project/res/layout/manga_detail_fragment.xml
@@ -297,6 +297,22 @@
                 android:textStyle="bold"
                 android:visibility="gone" />
             
+            <TextView
+                android:id="@+id/alternative_versions"
+                style="@style/detail_item"
+                app:layout_columnSpan="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
+            
+            <TextView
+                android:id="@+id/anime_adaptations"
+                style="@style/detail_item"
+                app:layout_columnSpan="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
+            
             <RelativeLayout
                 style="@style/detail_item"
                 app:layout_columnSpan="5"
