--- a/project/res/layout-sw720dp-port/main.xml
+++ b/project/res/layout-sw720dp-port/main.xml
@@ -18,12 +18,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:baselineAligned="false"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    >
 
     <FrameLayout
         android:layout_width="@dimen/left_hand_list_width"
         android:layout_height="match_parent"
-        android:background="@color/light_blue" >
+         >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/list_pager_anime"
